--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f8f8f8; /* Primary color */
+    background-color: #ec0000; /* Primary color */
     color: #0f0f0f; /* Text color */
     text-align: center;
 }
