--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
 
 body {
     font-family: Arial, sans-serif;
-    background-color:red;
+    background-color:white;
     color: #0f0f0f;
 }
 
