--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ header img {
 
 .hero h2 {
     font-size: 3rem;
+    color: black;
     /* Text color */
 }
 
@@ -54,6 +55,7 @@ header img {
     margin-left: 10px;
     margin-right: 10px;
     text-align: left;
+    color: black;
     /* Text color */
 }
 
@@ -82,6 +84,7 @@ header img {
 .videos h2 {
     font-size: 2rem;
     margin-bottom: 20px;
+    color: black;
     /* Text color */
 }
 
@@ -186,13 +189,14 @@ input[type="range"] {
 /* Ending */
 h4{
     font-size: 3rem;
+    color: black;
     
 }
 
 p {
     font-size: 14px;
     font-weight: normal;
-    /* Text color */
+    color: black;
     text-align: center;
     margin: 0 400px;
 }
